--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "use-debounce": "^10.0.1",
     "web-vitals": "^2.1.4"
   },
